Add git Ignore Logic for word finder

--- a/WordFinder.Tests/WordFinder.Tests.csproj
+++ b/WordFinder.Tests/WordFinder.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WordFinderAPI\WordFinderAPI.csproj" />
+  </ItemGroup>
+
 </Project>
